--- a/index.html
+++ b/index.html
@@ -142,35 +142,74 @@
 
       <div class="modal-body">
         <p>
-          This app applies a <b>unified diff patch</b> to a file by asking the selected Grok model to produce the patched output.
-          It then shows you the modified file and a side-by-side diff view.
-        </p>
+          This app applies a <b>unified diff patch</b> to a file by asking the selected model (xAI Grok or OpenAI GPT) to produce the patched output.
+           It then shows you the modified file and a side-by-side diff view.
+         </p>
 
-        <h3>Quick steps</h3>
-        <ol>
-          <li><b>Select Model</b> (top dropdown).</li>
-          <li><b>Paste or load</b> your unified diff patch into <b>Diff Patch</b>.</li>
-          <li><b>Paste or load</b> the original file content into <b>File Content</b>.</li>
-          <li>Enter your <b>API Key</b> (xAI or OpenAI), click <b>Save</b> (saved locally, encrypted).</li>
-          <li>Click <b>Apply Patch</b>.</li>
-          <li>Use <b>Copy</b> or <b>Download Modified File</b> once output is generated.</li>
-        </ol>
+         <h3>Quick steps</h3>
+         <ol>
+           <li><b>Pick a workspace tab</b> (left sidebar). Each tab keeps its own inputs, model, prompt, output, and diff.</li>
+           <li><b>Select Model</b> (top dropdown).</li>
+           <li><b>Choose System Prompt</b> (top button: <b>Prompt - ...</b>) if you need stricter/looser behavior.</li>
+           <li><b>Paste or load</b> your unified diff patch into <b>Diff Patch</b> (use “Choose file” under the textarea if you prefer).</li>
+           <li><b>Paste or load</b> the original file content into <b>File Content</b> (use “Choose file” under the textarea if you prefer).</li>
+           <li>Enter your <b>API Key</b> (xAI for <code>grok-*</code>, OpenAI for <code>gpt-*</code>) and <b>6-digit PIN</b>, then <b>Save</b> (stored locally, encrypted).</li>
+           <li>Click <b>Apply Patch</b>. Review the output and the “Diff with original”.</li>
+           <li>Use <b>Copy</b> or <b>Download Modified File</b> once output is generated.</li>
+         </ol>
 
-        <h3>Notes</h3>
-        <ul>
-          <li>The model is instructed to output <b>only the final file contents</b> (no code fences, no commentary).</li>
-          <li>If the file is large, you may get a size warning before sending.</li>
-          <li><b>Dark Mode</b> can be toggled via the <b>View → Dark Mode</b> menu item (or <b>Cmd/Ctrl + D</b>).</li>
-          <li>You can dismiss this help with <b>ESC</b>, the <b>×</b> button, or by clicking the background.</li>
-        </ul>
+         <h3>Workspaces (tabs)</h3>
+         <ul>
+           <li>Create a new tab with the <b>+</b> button (or <b>Cmd/Ctrl + T</b>).</li>
+           <li><b>Double-click</b> a tab to rename it.</li>
+           <li>Close a tab with the <b>×</b> on the tab (or <b>Cmd/Ctrl + W</b>).</li>
+           <li>Cycle tabs with <b>Cmd/Ctrl + Tab</b> (and <b>Cmd/Ctrl + Shift + Tab</b>).</li>
+         </ul>
 
-        <h3>Keyboard shortcuts</h3>
-        <ul>
-          <li><b>F1</b>: Open Usage Help</li>
-          <li><b>Cmd/Ctrl + D</b>: Toggle Dark Mode</li>
-          <li><b>ESC</b>: Close Help</li>
-        </ul>
-      </div>
+         <h3>System Prompt</h3>
+         <ul>
+           <li>Open via the top <b>Prompt - ...</b> button, or <b>Edit → System Prompt…</b> (<b>Cmd/Ctrl + Shift + P</b>).</li>
+           <li><b>Default</b> is locked. Use <b>New</b> or <b>Duplicate</b> to create a custom prompt.</li>
+           <li>Click <b>Use in this tab</b> to apply the selected prompt to the current workspace.</li>
+           <li>Prompts are stored locally (in this app's localStorage).</li>
+         </ul>
+
+         <h3>API keys (xAI / OpenAI)</h3>
+         <ul>
+           <li>Open via <b>File → xAI API Key…</b> (<b>Cmd/Ctrl + K</b>) or <b>File → OpenAI API Key…</b> (<b>Cmd/Ctrl + Shift + K</b>).</li>
+           <li>Keys are encrypted locally using your <b>6-digit PIN</b>. The PIN is not stored; you unlock keys once per app session.</li>
+           <li>The app automatically chooses which provider key to use based on the model name (<code>grok-*</code> vs <code>gpt-*</code>).</li>
+         </ul>
+
+         <h3>Output, diff navigation, and tools</h3>
+         <ul>
+           <li>The model is instructed to output <b>only the final file contents</b> (no code fences, no commentary).</li>
+           <li>If the file is large, you may get a size warning before sending.</li>
+           <li>The top-right metadata shows <b>time</b> and an <b>estimated token count</b> as: <code>&lt;time&gt; / &lt;tokens&gt;</code>.</li>
+           <li><b>Prev change</b> / <b>Next change</b> buttons appear when the diff section is on-screen.</li>
+           <li><b>Go to top</b> appears after you scroll down.</li>
+           <li>Use the <b>⛶</b>/<b>🗕</b> buttons to expand/collapse Diff, File Content, and Output.</li>
+           <li><b>Retry</b> appears when a request fails and retries are available.</li>
+           <li><b>Dark Mode</b> can be toggled via the <b>View → Dark Mode</b> menu item (or <b>Cmd/Ctrl + D</b>).</li>
+           <li>You can dismiss this help with <b>ESC</b>, the <b>×</b> button, or by clicking the background.</li>
+         </ul>
+
+         <h3>Keyboard shortcuts</h3>
+         <ul>
+           <li><b>F1</b>: Open Usage Help</li>
+           <li><b>Cmd/Ctrl + D</b>: Toggle Dark Mode</li>
+           <li><b>Cmd/Ctrl + K</b>: xAI API Key</li>
+           <li><b>Cmd/Ctrl + Shift + K</b>: OpenAI API Key</li>
+           <li><b>Cmd/Ctrl + Shift + P</b>: System Prompt</li>
+           <li><b>Cmd/Ctrl + T</b>: New tab</li>
+           <li><b>Cmd/Ctrl + W</b>: Close tab</li>
+           <li><b>Cmd/Ctrl + Tab</b>: Next tab</li>
+           <li><b>Cmd/Ctrl + Shift + Tab</b>: Previous tab</li>
+           <li><b>F7</b>: Previous change</li>
+           <li><b>F8</b>: Next change</li>
+           <li><b>ESC</b>: Close the currently open dialog</li>
+         </ul>
+       </div>
 
       <div class="modal-footer">
         <button id="helpOkBtn" class="modal-ok">Close</button>
@@ -187,7 +226,7 @@
       <div class="modal-body">
         <p id="keyTypeIntro">
           No API keys are saved yet. Choose which provider you want to configure first.
-          You’ll set a <b>6-digit PIN</b> once, and it will be used to encrypt/decrypt keys locally.
+          You'll set a <b>6-digit PIN</b> once, and it will be used to encrypt/decrypt keys locally.
         </p>
         <div id="keyTypeHint" class="modal-hint"></div>
       </div>
@@ -210,7 +249,7 @@
       <div class="modal-body">
         <p id="apiKeyModalIntro">
           Enter your <b>API Key</b> and a <b>6-digit PIN</b>. The key is encrypted locally and stored in this app (localStorage).
-          The PIN is not stored — you’ll be asked for it on app launch to unlock saved keys.
+          The PIN is not stored — you'll be asked for it on app launch to unlock saved keys.
         </p>
 
         <label id="apiKeyModalLabel" for="apiKeyModalInput">API Key</label>
