--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Security-Policy"
-      content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-eval';">
+      content="default-src 'self'; img-src 'self' data: file:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-eval';">
   <title>AI Diff Tool - Grok 4 Patch Applier</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="node_modules/diff2html/bundles/css/diff2html.min.css">
@@ -132,6 +132,67 @@
 </main>
   </div>
 
+  <!-- About overlay (opened from Help → About…) -->
+  <div id="aboutOverlay" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="aboutTitle">
+    <div class="modal-content  modal-about" role="document">
+      <div class="modal-header">
+        <h2 id="aboutTitle">About</h2>
+        <button id="aboutCloseBtn" class="modal-close" aria-label="Close about">×</button>
+      </div>
+
+      <div class="modal-body">
+        <div class="about-thanks" id="aboutThanks">Thank you for using</div>
+
+        <div class="about-app-name" id="aboutAppName">AI Diff Tool</div>
+
+        <!-- Place the creator image inside the app bundle. Recommended path: build/creator.png -->
+        <img
+        id="aboutCreatorImg"
+        class="about-image"
+        src=""
+        alt="Creator"
+        />
+
+
+        <div class="about-meta">
+          <div class="about-row">
+            <div class="about-label">Creator</div>
+            <div class="about-value" id="aboutCreatorName"></div>
+          </div>
+
+          <div class="about-row">
+            <div class="about-label">Email</div>
+            <div class="about-value">
+              <a id="aboutCreatorEmail" href="#" rel="noreferrer"></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="about-actions">
+          <button id="aboutDonateBtn" class="modal-ok" type="button">Donate</button>
+          <button id="aboutGitHubBtn" class="modal-ok" type="button">GitHub Repo</button>
+        </div>
+
+        <div class="about-footer">
+          <div class="about-license">
+            <div class="about-license-title">Open Source License</div>
+            <div class="about-license-text">
+              This project is open-source. See the LICENSE file in the GitHub repository.
+            </div>
+          </div>
+
+          <div class="about-version">
+            Version <span id="aboutVersion"></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal-footer">
+        <button id="aboutOkBtn" class="modal-ok">Close</button>
+      </div>
+    </div>
+  </div>
+
   <!-- Help overlay (opened from Help menu) -->
   <div id="helpOverlay" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="helpTitle">
     <div class="modal-content" role="document">
@@ -142,74 +203,35 @@
 
       <div class="modal-body">
         <p>
-          This app applies a <b>unified diff patch</b> to a file by asking the selected model (xAI Grok or OpenAI GPT) to produce the patched output.
-           It then shows you the modified file and a side-by-side diff view.
-         </p>
+          This app applies a <b>unified diff patch</b> to a file by asking the selected Grok model to produce the patched output.
+          It then shows you the modified file and a side-by-side diff view.
+        </p>
 
-         <h3>Quick steps</h3>
-         <ol>
-           <li><b>Pick a workspace tab</b> (left sidebar). Each tab keeps its own inputs, model, prompt, output, and diff.</li>
-           <li><b>Select Model</b> (top dropdown).</li>
-           <li><b>Choose System Prompt</b> (top button: <b>Prompt - ...</b>) if you need stricter/looser behavior.</li>
-           <li><b>Paste or load</b> your unified diff patch into <b>Diff Patch</b> (use “Choose file” under the textarea if you prefer).</li>
-           <li><b>Paste or load</b> the original file content into <b>File Content</b> (use “Choose file” under the textarea if you prefer).</li>
-           <li>Enter your <b>API Key</b> (xAI for <code>grok-*</code>, OpenAI for <code>gpt-*</code>) and <b>6-digit PIN</b>, then <b>Save</b> (stored locally, encrypted).</li>
-           <li>Click <b>Apply Patch</b>. Review the output and the “Diff with original”.</li>
-           <li>Use <b>Copy</b> or <b>Download Modified File</b> once output is generated.</li>
-         </ol>
+        <h3>Quick steps</h3>
+        <ol>
+          <li><b>Select Model</b> (top dropdown).</li>
+          <li><b>Paste or load</b> your unified diff patch into <b>Diff Patch</b>.</li>
+          <li><b>Paste or load</b> the original file content into <b>File Content</b>.</li>
+          <li>Enter your <b>API Key</b> (xAI or OpenAI), click <b>Save</b> (saved locally, encrypted).</li>
+          <li>Click <b>Apply Patch</b>.</li>
+          <li>Use <b>Copy</b> or <b>Download Modified File</b> once output is generated.</li>
+        </ol>
 
-         <h3>Workspaces (tabs)</h3>
-         <ul>
-           <li>Create a new tab with the <b>+</b> button (or <b>Cmd/Ctrl + T</b>).</li>
-           <li><b>Double-click</b> a tab to rename it.</li>
-           <li>Close a tab with the <b>×</b> on the tab (or <b>Cmd/Ctrl + W</b>).</li>
-           <li>Cycle tabs with <b>Cmd/Ctrl + Tab</b> (and <b>Cmd/Ctrl + Shift + Tab</b>).</li>
-         </ul>
+        <h3>Notes</h3>
+        <ul>
+          <li>The model is instructed to output <b>only the final file contents</b> (no code fences, no commentary).</li>
+          <li>If the file is large, you may get a size warning before sending.</li>
+          <li><b>Dark Mode</b> can be toggled via the <b>View → Dark Mode</b> menu item (or <b>Cmd/Ctrl + D</b>).</li>
+          <li>You can dismiss this help with <b>ESC</b>, the <b>×</b> button, or by clicking the background.</li>
+        </ul>
 
-         <h3>System Prompt</h3>
-         <ul>
-           <li>Open via the top <b>Prompt - ...</b> button, or <b>Edit → System Prompt…</b> (<b>Cmd/Ctrl + Shift + P</b>).</li>
-           <li><b>Default</b> is locked. Use <b>New</b> or <b>Duplicate</b> to create a custom prompt.</li>
-           <li>Click <b>Use in this tab</b> to apply the selected prompt to the current workspace.</li>
-           <li>Prompts are stored locally (in this app's localStorage).</li>
-         </ul>
-
-         <h3>API keys (xAI / OpenAI)</h3>
-         <ul>
-           <li>Open via <b>File → xAI API Key…</b> (<b>Cmd/Ctrl + K</b>) or <b>File → OpenAI API Key…</b> (<b>Cmd/Ctrl + Shift + K</b>).</li>
-           <li>Keys are encrypted locally using your <b>6-digit PIN</b>. The PIN is not stored; you unlock keys once per app session.</li>
-           <li>The app automatically chooses which provider key to use based on the model name (<code>grok-*</code> vs <code>gpt-*</code>).</li>
-         </ul>
-
-         <h3>Output, diff navigation, and tools</h3>
-         <ul>
-           <li>The model is instructed to output <b>only the final file contents</b> (no code fences, no commentary).</li>
-           <li>If the file is large, you may get a size warning before sending.</li>
-           <li>The top-right metadata shows <b>time</b> and an <b>estimated token count</b> as: <code>&lt;time&gt; / &lt;tokens&gt;</code>.</li>
-           <li><b>Prev change</b> / <b>Next change</b> buttons appear when the diff section is on-screen.</li>
-           <li><b>Go to top</b> appears after you scroll down.</li>
-           <li>Use the <b>⛶</b>/<b>🗕</b> buttons to expand/collapse Diff, File Content, and Output.</li>
-           <li><b>Retry</b> appears when a request fails and retries are available.</li>
-           <li><b>Dark Mode</b> can be toggled via the <b>View → Dark Mode</b> menu item (or <b>Cmd/Ctrl + D</b>).</li>
-           <li>You can dismiss this help with <b>ESC</b>, the <b>×</b> button, or by clicking the background.</li>
-         </ul>
-
-         <h3>Keyboard shortcuts</h3>
-         <ul>
-           <li><b>F1</b>: Open Usage Help</li>
-           <li><b>Cmd/Ctrl + D</b>: Toggle Dark Mode</li>
-           <li><b>Cmd/Ctrl + K</b>: xAI API Key</li>
-           <li><b>Cmd/Ctrl + Shift + K</b>: OpenAI API Key</li>
-           <li><b>Cmd/Ctrl + Shift + P</b>: System Prompt</li>
-           <li><b>Cmd/Ctrl + T</b>: New tab</li>
-           <li><b>Cmd/Ctrl + W</b>: Close tab</li>
-           <li><b>Cmd/Ctrl + Tab</b>: Next tab</li>
-           <li><b>Cmd/Ctrl + Shift + Tab</b>: Previous tab</li>
-           <li><b>F7</b>: Previous change</li>
-           <li><b>F8</b>: Next change</li>
-           <li><b>ESC</b>: Close the currently open dialog</li>
-         </ul>
-       </div>
+        <h3>Keyboard shortcuts</h3>
+        <ul>
+          <li><b>F1</b>: Open Usage Help</li>
+          <li><b>Cmd/Ctrl + D</b>: Toggle Dark Mode</li>
+          <li><b>ESC</b>: Close Help</li>
+        </ul>
+      </div>
 
       <div class="modal-footer">
         <button id="helpOkBtn" class="modal-ok">Close</button>
@@ -226,7 +248,7 @@
       <div class="modal-body">
         <p id="keyTypeIntro">
           No API keys are saved yet. Choose which provider you want to configure first.
-          You'll set a <b>6-digit PIN</b> once, and it will be used to encrypt/decrypt keys locally.
+          You’ll set a <b>6-digit PIN</b> once, and it will be used to encrypt/decrypt keys locally.
         </p>
         <div id="keyTypeHint" class="modal-hint"></div>
       </div>
@@ -249,7 +271,7 @@
       <div class="modal-body">
         <p id="apiKeyModalIntro">
           Enter your <b>API Key</b> and a <b>6-digit PIN</b>. The key is encrypted locally and stored in this app (localStorage).
-          The PIN is not stored — you'll be asked for it on app launch to unlock saved keys.
+          The PIN is not stored — you’ll be asked for it on app launch to unlock saved keys.
         </p>
 
         <label id="apiKeyModalLabel" for="apiKeyModalInput">API Key</label>
