--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
   <!-- History modal added (View → History…) -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="Content-Security-Policy"
-      content="default-src 'self'; img-src 'self' data: file:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-eval';">
+  
+  <meta http-equiv="Content-Security-Policy"
+  content="
+    default-src 'self';
+    img-src 'self' data: file: https://*.razorpay.com https://razorpay.com;
+    style-src 'self' 'unsafe-inline' https://cdn.razorpay.com https://*.razorpay.com;
+    style-src-elem 'self' 'unsafe-inline' https://cdn.razorpay.com https://*.razorpay.com;
+    script-src 'self' 'unsafe-eval' https://checkout.razorpay.com https://cdn.razorpay.com https://browser.sentry-cdn.com;
+    script-src-elem 'self' 'unsafe-eval' https://checkout.razorpay.com https://cdn.razorpay.com https://browser.sentry-cdn.com;
+    connect-src 'self' https://*.razorpay.com https://razorpay.com https://*.sentry.io;
+    frame-src 'self' https://*.razorpay.com https://razorpay.com http://127.0.0.1:* http://localhost:*;
+    form-action 'self' https://*.razorpay.com https://razorpay.com;
+  ">
+
+  
   <title>AI Diff Tool - Grok 4 Patch Applier</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="node_modules/diff2html/bundles/css/diff2html.min.css">
@@ -188,8 +201,20 @@
         </div>
 
         <div class="about-actions">
-          <button id="aboutDonateBtn" class="modal-ok" type="button">Donate</button>
           <button id="aboutGitHubBtn" class="modal-ok" type="button">GitHub Repo</button>
+        </div>
+
+        <!-- Razorpay payment button (sandboxed iframe) -->
+        <div class="about-razorpay" aria-label="Donate with Razorpay">
+          <div class="about-license-title" id="aboutRazorpayTitle">Donate (Razorpay)</div>
+          <iframe
+            id="aboutRazorpayFrame"
+            class="about-razorpay-frame"
+            title="Razorpay payment button"
+            sandbox="allow-scripts allow-forms allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-top-navigation-by-user-activation"
+            referrerpolicy="no-referrer"
+            style="width: 100%; height: 92px; border: 0; overflow: hidden;"
+          ></iframe>
         </div>
 
         <div class="about-footer">
@@ -306,7 +331,7 @@
       <div class="modal-body">
         <p id="keyTypeIntro">
           No API keys are saved yet. Choose which provider you want to configure first.
-          You’ll set a <b>6-digit PIN</b> once, and it will be used to encrypt/decrypt keys locally.
+          You'll set a <b>6-digit PIN</b> once, and it will be used to encrypt/decrypt keys locally.
         </p>
         <div id="keyTypeHint" class="modal-hint"></div>
       </div>
@@ -329,7 +354,7 @@
       <div class="modal-body">
         <p id="apiKeyModalIntro">
           Enter your <b>API Key</b> and a <b>6-digit PIN</b>. The key is encrypted locally and stored in this app (localStorage).
-          The PIN is not stored — you’ll be asked for it on app launch to unlock saved keys.
+          The PIN is not stored — you'll be asked for it on app launch to unlock saved keys.
         </p>
 
         <label id="apiKeyModalLabel" for="apiKeyModalInput">API Key</label>
