--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
   </div>
  
   <div class="main-topbar-actions">
+
+    <button id="copyOutputTopBtn" class="topbar-btn topbar-btn--nav hidden" type="button" title="Copy Output" aria-label="Copy Output">
+      Copy Output
+    </button>
     <button id="diffPrevBtn" class="topbar-btn topbar-btn--nav hidden" type="button" title="Previous change">
       Prev change
     </button>
