--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
       Next change
     </button>
 
+    <!-- Appears only when the diff section is below the viewport (and output exists) -->
+    <button id="goOutputDiffBtn" class="topbar-btn topbar-btn--main hidden" type="button" title="Output Diff" aria-label="Output Diff">
+      Output Diff
+    </button>
     <!-- Appears only after scrolling down -->
     <button id="goTopBtn" class="topbar-btn topbar-btn--main hidden" type="button">
       Go to top
