--- a/index.html
+++ b/index.html
@@ -63,23 +63,23 @@
  
   <div class="main-topbar-actions">
 
-    <button id="copyOutputTopBtn" class="topbar-btn topbar-btn--nav hidden" type="button" title="Copy Output" aria-label="Copy Output">
-      Copy Output
+    <button id="copyOutputTopBtn" class="topbar-btn topbar-btn--nav with-icon hidden" type="button" title="Copy Output" aria-label="Copy Output">
+      <span class="btn-ico" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M8 8h12v12H8z"/><path d="M4 4h12v12"/></svg></span><span class="btn-label">Copy Output</span>
     </button>
-    <button id="diffPrevBtn" class="topbar-btn topbar-btn--nav hidden" type="button" title="Previous change">
-      Prev change
+    <button id="diffPrevBtn" class="topbar-btn topbar-btn--nav with-icon hidden" type="button" title="Previous change">
+      <span class="btn-ico" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M15 18l-6-6 6-6"/></svg></span><span class="btn-label">Prev change</span>
     </button>
-    <button id="diffNextBtn" class="topbar-btn topbar-btn--nav hidden" type="button" title="Next change">
-      Next change
+    <button id="diffNextBtn" class="topbar-btn topbar-btn--nav with-icon hidden" type="button" title="Next change">
+      <span class="btn-ico" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></span><span class="btn-label">Next change</span>
     </button>
 
     <!-- Appears only when the diff section is below the viewport (and output exists) -->
-    <button id="goOutputDiffBtn" class="topbar-btn topbar-btn--main hidden" type="button" title="Output Diff" aria-label="Output Diff">
-      Output Diff
+    <button id="goOutputDiffBtn" class="topbar-btn topbar-btn--main with-icon hidden" type="button" title="Output Diff" aria-label="Output Diff">
+      <span class="btn-ico" aria-hidden="true"><svg viewBox="0 0 24 24"><rect x="4" y="5" width="7" height="14" rx="1.5"/><rect x="13" y="5" width="7" height="14" rx="1.5"/><path d="M11 12h2"/></svg></span><span class="btn-label">Output Diff</span>
     </button>
     <!-- Appears only after scrolling down -->
-    <button id="goTopBtn" class="topbar-btn topbar-btn--main hidden" type="button">
-      Go to top
+    <button id="goTopBtn" class="topbar-btn topbar-btn--main with-icon hidden" type="button">
+      <span class="btn-ico" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M12 19V5"/><path d="M6 11l6-6 6 6"/></svg></span><span class="btn-label">Go to top</span>
     </button>
   </div>
 </div>
