--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
       <div class="model-action-left">
         <label for="modelSelect" class="inline-label" id="modelSelectLabel">Select Model:</label>
         <select id="modelSelect">
-          <optgroup label="xAI">
+          <optgroup label="xAI" data-provider="xai">
             <option value="grok-4-1-fast-reasoning">grok-4-1-fast-reasoning</option>
             <option value="grok-4-1-fast-non-reasoning">grok-4-1-fast-non-reasoning</option>
             <option value="grok-code-fast-1">grok-code-fast-1</option>
             <option value="grok-4-fast-reasoning">grok-4-fast-reasoning</option>
             <option value="grok-4-fast-non-reasoning">grok-4-fast-non-reasoning</option>
           </optgroup>
-          <optgroup label="OpenAI">
+          <optgroup label="OpenAI" data-provider="openai">
             <option value="gpt-4.1-mini">gpt-4.1-mini</option>
             <option value="gpt-4.1-nano">gpt-4.1-nano</option>
             <option value="gpt-5.2-mini">gpt-5.2-mini</option>
