flexi width side bar

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
   </div>
 </aside>
 
+    <div id="sidebarResizer" class="sidebar-resizer" role="separator" aria-orientation="vertical" aria-label="Resize sidebar" tabindex="0"></div>
+
     <main class="main">
   <!-- Fixed topbar (same height as sidebar topbar) -->
   <div class="main-topbar">
